# neuro-eeg-cdss

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: 10_dataset.md  60_project_overview.md
docs/00_sprints/: sprint_0A.md  sprint_0B.md  sprint_0C.md  sprint_1A.md  sprint_1B.md
reports/inspection_subject_distribution/: inspection_report.md  inspection_summary.json  subject_summary.csv  top_by_positive.csv  top_by_segments.csv  zero_positive_subjects.csv
scripts/data_checks/: check_bids_structure.py  inspect_annotations.py  read_one_recording.py
scripts/data_index/: build_manifest.py
scripts/download/: download_chbmit_bids.py
scripts/features/: build_features_dataset.py  check_features.py
scripts/inspection/: inspect_subject_distribution.py
scripts/preprocessing/: build_segments_dataset.py  check_segments.py
src/neuro_eeg_cdss/: __init__.py
src/neuro_eeg_cdss/features/: dataset_builder.py  extractors.py  frequency_domain.py  time_domain.py
src/neuro_eeg_cdss/preprocessing/: dataset_builder.py  events.py  labeling.py  segmentation.py
tests/: test_dataset_builder.py  test_events_parser.py  test_extractors.py  test_feature_dataset_builder.py  test_frequency_domain.py  test_import.py  test_labeling.py  test_segmentation.py  test_time_domain.py
