[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-eeg-cdss"
version = "0.1.0"
description = "Epileptic seizure detection system from EEG"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "mne",
    "mne-bids",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "pydantic",
    "torch",
    "torchaudio"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "ipykernel"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]